--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
        <a href="#" class="btn btn-primary mr-2"><i class="fas fa-link"></i> Visit Site</a>
-    <a href="#" class="btn "><i class="fab fa-github"></i> Github</a>
+    <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Github</a>
   </div>
   </div>
     </div>    
@@ -43,7 +43,7 @@
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary mr-2"><i class="fas fa-link"></i> Visit Site</a>
-    <a href="#" class="btn "><i class="fab fa-github"></i> Github</a>
+    <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Github</a>
   </div>
   </div>
   </div>
